# ComputerGraphicsLabs

./: .gitignore  CMakeLists.txt
libs/: CMakeLists.txt
res/shaders/: additive_blend.frag  blur.vert  box.vert  default.frag  default.vert  grid.frag  horizontal_blur.frag  line.vert  model_normal.frag  model_uv.frag  pbr.frag  pbr.vert  pbr_gloss.frag  texture_albedo.frag  texture_ao.frag  texture_normal.frag  texture_roughness.frag  texture_specular.frag  torus.frag  vertical_blur.frag  white_bloom.frag  whole.vert
shaders/: arrow.vert  box.vert  color.frag  grid.frag  line.vert  torus.frag  triangle.frag  triangle.vert  whole.vert
src/: allocated.hpp  app.cpp  app.hpp  camera.hpp  debug_pipelines.cpp  debug_pipelines.hpp  dynamic_instancing_buffer.hpp  dynamic_instaning_buffer.hpp  editor.cpp  editor.hpp  editor_object.hpp  engine.cpp  engine.hpp  files.cpp  files.hpp  grid_object.hpp  initializers.hpp  main.cpp  mesh_object.hpp  mesh_renderer.cpp  mesh_renderer.hpp  object_entry.hpp  orbiting_camera.hpp  shader_compiler.hpp  vertex.hpp  window_manager.hpp
